--- a/package/package.json
+++ b/package/package.json
@@ -1,55 +1,37 @@
 {
-  "name": "starter-bt5",
-  "version": "0.1.0",
+  "name": "materialpro-react-lite",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
+  },
   "dependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
-    "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/react": "14.0.0",
-    "@testing-library/user-event": "14.4.3",
-    "apexcharts": "3.41.0",
     "bootstrap": "5.3.0",
     "bootstrap-icons": "1.10.5",
-    "history": "5.3.0",
     "node-sass": "9.0.0",
     "prop-types": "15.8.1",
-    "react": "18.2.0",
-    "react-apexcharts": "1.4.0",
-    "react-dom": "18.2.0",
-    "react-router-dom": "6.12.1",
-    "reactstrap": "9.2.0",
-    "sass": "1.63.2",
-    "web-vitals": "3.3.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0",
+    "reactstrap": "^9.2.0",
+    "@svgr/rollup": "^8.1.0",
+    "sass": "^1.68.0"
   },
   "devDependencies": {
-    "@babel/plugin-transform-private-property-in-object": "7.22.5",
-    "react-scripts": "5.0.1"
-  },
-  "overrides": {
-    "nth-check": "2.1.1"
+    "@svgr/rollup": "^8.1.0",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react": "^4.0.3",
+    "eslint": "^8.45.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "sass": "^1.68.0",
+    "vite": "^4.4.5"
   }
 }
