--- a/package/package.json
+++ b/package/package.json
@@ -10,16 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "bootstrap": "5.3.0",
+    "@svgr/rollup": "^8.1.0",
+    "bootstrap": "^5.3.3",
     "bootstrap-icons": "1.10.5",
     "node-sass": "9.0.0",
     "prop-types": "15.8.1",
-    "react": "^18.2.0",
+    "react": "^19.0.0",
     "react-apexcharts": "^1.4.1",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0",
-    "reactstrap": "^9.2.0",
-    "@svgr/rollup": "^8.1.0",
+    "react-dom": "^19.0.0",
+    "react-router": "^7.0.2",
+    "reactstrap": "^9.2.3",
     "sass": "^1.68.0"
   },
   "devDependencies": {
