--- a/package/package.json
+++ b/package/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://wrappixelTeam.github.io/materialpro-react-lite",
-  "name": "starterkit-vite-ts",
+  "name": "materialpro-react-lite",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -18,23 +18,23 @@
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.13.0",
     "@iconify/react": "^5.0.2",
-    "@mui/icons-material": "6.1.1",
-    "@mui/lab": "6.0.0-beta.10",
-    "@mui/material": "^6.1.6",
+    "@mui/icons-material": "^6.4.4",
+    "@mui/lab": "^6.0.0-beta.27",
+    "@mui/material": "^6.4.7",
     "@svgr/rollup": "8.1.0",
     "@tabler/icons-react": "^2.39.0",
-    "apexcharts": "3.48.0",
+    "apexcharts": "4.4.0",
     "i18next": "24.0.5",
     "lodash": "4.17.21",
-    "react": "^19.0.0-rc-02c0e824-20241028",
-    "react-apexcharts": "^1.4.1",
+    "react": "^19.0.0",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "19.0.0",
     "react-helmet": "^6.1.0",
+    "react-mui-sidebar": "^1.6.3",
     "react-i18next": "15.1.3",
     "react-router": "^7.0.2",
     "react-top-loading-bar": "^2.3.1",
-    "simplebar": "^6.2.7",
-    "simplebar-react": "3.2.6",
+    "simplebar-react": "^3.3.0",
     "stylis-plugin-rtl": "^2.1.1",
     "yup": "1.4.0"
   },
